<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_text"
            android:textSize="@dimen/textView_Size" />

        <EditText
            android:id="@+id/fullNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width_size"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:textSize="@dimen/textView_Size" />

        <EditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width_size"
            android:hint="@string/phone_number_hint"
            android:textSize="@dimen/textview_phone_Size"
            android:inputType="phone"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="@dimen/textView_Size"
            />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width_size"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_text"
            android:textSize="@dimen/textView_Size" />

        <EditText
            android:id="@+id/birthInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/editText_width_size"
            android:hint="@string/birthday_hint"
            android:textSize="@dimen/textview_phone_Size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_text"
            android:textSize="@dimen/textView_Size" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/selectedMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sexHandle"
                android:text="@string/masc_option" />

            <RadioButton
                android:id="@+id/selectedFemin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sexHandle"
                android:text="@string/femin_option" />

            <RadioButton
                android:id="@+id/selectedOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sexHandle"
                android:text="@string/other_option" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelHandler"
                android:text="@string/cancel_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="updateContactHandler"
                android:text="@string/updated_text" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>